@@ -1,5 +1,10 @@
 2004-05-11  Bruno Haible  <bruno@clisp.org>
 
+	* arisparc64.d: Add register declaration for %g2.
+	(copy_loop_down): Fix wrong register.
+
+2004-05-11  Bruno Haible  <bruno@clisp.org>
+
 	* arilev0.d (mulu32) [SPARC64]: Fix asm syntax.
 
 2004-05-11  Sam Steingold  <sds@gnu.org>
